Fix bottom area on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,7 @@ img {
   display: flex;
   margin-left: 15%;
   margin-right: 15%;
+  margin-bottom: 10%;
 }
 
 .column {
